WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157244
REGRESSION (
r198943
): Transitions don't work if they animate display property
https://bugs.webkit.org/show_bug.cgi?id=157244
Summary
REGRESSION (r198943): Transitions don't work if they animate display property
Anne van Kesteren
Reported
2016-04-30 23:29:23 PDT
When resizing
https://annevankesteren.nl/
to be less than 800px a media query kicks in. Most works fine, however transforms are not reset, resulting in too large navigation items (or too small, the other way around).
Attachments
patch
(8.35 KB, patch)
2016-05-02 20:06 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2016-05-02 05:33:34 PDT
As far as I can tell this is a regression from stable Safari. Maybe it's already known?
Simon Fraser (smfr)
Comment 2
2016-05-02 08:46:58 PDT
Not known to me, at least. Are you reporting this against Safari Technology Preview 3?
Anne van Kesteren
Comment 3
2016-05-02 09:49:31 PDT
Looks like it from the App Store. About says "Version 9.1.1 (11601.6.17, 11602.1.29)".
Simon Fraser (smfr)
Comment 4
2016-05-02 10:18:30 PDT
autospade says
http://trac.webkit.org/changeset/198943
Radar WebKit Bug Importer
Comment 5
2016-05-02 10:22:56 PDT
<
rdar://problem/26042189
>
Antti Koivisto
Comment 6
2016-05-02 20:06:02 PDT
Created
attachment 277965
[details]
patch
Simon Fraser (smfr)
Comment 7
2016-05-02 20:50:36 PDT
Comment on
attachment 277965
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=277965&action=review
> Source/WebCore/style/StyleTreeResolver.cpp:233 > + // FIXME: Animations should be connected to elements, not renderers.
I think you should remove this FIXME. The consensus in the CSS WG is that animations run on renders, so you'll never be able to animate from display:none.
> LayoutTests/ChangeLog:10 > + * fast/css/transition-display-property-expected.html: Added. > + * fast/css/transition-display-property.html: Added.
Maybe the test should go in transitions/ ?
Antti Koivisto
Comment 8
2016-05-02 20:56:31 PDT
> I think you should remove this FIXME. The consensus in the CSS WG is that > animations run on renders, so you'll never be able to animate from > display:none.
The comment is really about how we structure the code. As far as I understand there is no need for animation code to know about renderers.
Antti Koivisto
Comment 9
2016-05-03 11:00:27 PDT
http://trac.webkit.org/changeset/200381
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug